# semantic-encoding-aesthetics

./: README.md  pyproject.toml
src/semantic-encoding-aesthetics/: __init__.py  __main__.py  audio_primitives.py  server.py
